# qlogexplorer

./: .clang-format  .gitignore  AbstractLogModel.cpp  AbstractLogModel.h  AbstractModel.cpp  AbstractModel.h  BaseLogModel.cpp  BaseLogModel.h  CMakeLists.txt  FileMonitor.cpp  HeaderView.cpp  HeaderView.h  JsonLogModel.cpp  JsonLogModel.h  LogSearchWidget.cpp  LogSearchWidget.h  LogTabWidget.cpp  LogTabWidget.h  LogView.cpp  LogView.h  LogViewWidget.cpp  LogViewWidget.h  LongScrollBar.cpp  LongScrollBar.h  MainWindow.cpp  MainWindow.h  ProxyModel.cpp  ProxyModel.h  README.md  SearchParamWidget.cpp  SearchParamWidget.h  TextLogModel.cpp  TextLogModel.h  index.md  main.cpp  pch.h  qlogexplorer.qrc  qlogviewer.qrc
.github/workflows/: linux-build.yml  windows-build.yml
images/: buildImages.sh
languages/: pt.qm  pt.ts
packaging/: updateIcon.sh  updateReleaseInfo.py
packaging/linux/flatpak/: io.github.rafaelfassi.QLogExplorer.yaml
packaging/linux/xdg/applications/: qlogexplorer.desktop
packaging/linux/xdg/metainfo/: qlogexplorer.appdata.xml
packaging/win/: innosetup.iss  qlogexplorer.rc
src/: Conf.cpp  Conf.h  FileConf.cpp  FileConf.h  InFileStream.cpp  InFileStream.h  Settings.cpp  Settings.h  Types.cpp  Types.h  Utils.cpp  Utils.h  main.cpp  pch.h
src/gui/: GuiTypes.h  HeaderView.cpp  HeaderView.h  Highlighter.cpp  Highlighter.h  LogSearchWidget.cpp  LogSearchWidget.h  LogTabWidget.cpp  LogTabWidget.h  LogViewWidget.cpp  LogViewWidget.h  LongScrollBar.cpp  LongScrollBar.h  MainWindow.cpp  MainWindow.h  ProgressLabel.cpp  ProgressLabel.h  SearchParamControl.cpp  SearchParamControl.h  SearchParamWidget.cpp  SearchParamWidget.h  SettingsDlg.cpp  SettingsDlg.h  Style.cpp  Style.h  TemplatesConfigDlg.cpp  TemplatesConfigDlg.h
src/match/: BaseMatcher.h  Matcher.cpp  Matcher.h  ParamsMatcher.cpp  ParamsMatcher.h  RangeMatcher.cpp  RangeMatcher.h  RegexMatcher.cpp  RegexMatcher.h  SubStringMatcher.cpp  SubStringMatcher.h
src/model/: AbstractModel.h  BaseLogModel.cpp  BaseLogModel.h  JsonLogModel.cpp  JsonLogModel.h  ProxyModel.cpp  ProxyModel.h  SearchParamModel.cpp  SearchParamModel.h  TextLogModel.cpp  TextLogModel.h
styles/: Dark.json  Dark.qss  Default.json  Default.qss  Light.json  Light.qss
